moved facebook login link

--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -5,5 +5,5 @@
   <%= f.password_field :password, placeholder: "Enter your password" %>
   <%= f.submit "Login" %>
 <% end %>
-
+<%= link_to 'Login with Facebook', '/auth/facebook', class: 'btn btn-primary' %>
 <p>Current User: <%= @current_user.inspect %></p>
